--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttk_library",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mrmepoo/ttk_library.git"
+    "url": "https://github.com/mrmepoo/ttk_library.git"
   },
   "author": "tunglt17",
   "license": "ISC",
