--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttk_library",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/mrmepoo/ttk_library/issues"
   },
-  "homepage": "https://github.com/mrmepoo/ttk_library#readme"
+  "homepage": "https://github.com/mrmepoo/ttk_library#readme",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "validator": "^13.11.0"
+  }
 }
